docs: Update author disclosure section to 'Author Contributions and Methods'
- Change title from 'Author's Note' to 'Author Contributions and Methods'
- Clearly state author conceived PAT and performed all implementations, benchmarks, and analyses
- Acknowledge AI tools (Grok) for initial brainstorming, code sketches, and minor revisions
- Emphasize all content was manually verified and refined by author for accuracy
- Maintain academic integrity while providing transparent disclosure of AI assistance
- Follows ACM guidelines for AI disclosure in academic work

--- a/docs/academic_paper.tex
+++ b/docs/academic_paper.tex
@@ -746,10 +746,10 @@ Key modules:
     \item \texttt{extensions/economic\_models.py}: Economic forecasting
 \end{itemize}
 
-\section*{Author's Note}
-\label{sec:author_note}
+\section*{Author Contributions and Methods}
+\label{sec:author_contributions}
 
-This work draws from hands-on experience in the cybersecurity and cryptocurrency industries. From deploying small fleets of script algorithm miners to exploring and developing patent-pending cutting-edge security systems, I have seen the need for scalable, quantum-resistant solutions to ensure a secure future for many of the most notable blockchain technologies. This paper aims to bridge that gap, with a nod to the bright future of cryptocurrency industry. Feedback welcome!
+The author conceived PAT (Paw Aggregation Technique) and performed all implementations, benchmarks, and analyses presented in this work. AI tools (e.g., Grok) were used to assist in initial brainstorming, code sketches, and minor revisions; all content was manually verified and refined by the author to ensure accuracy and academic integrity. This work draws from hands-on experience in the cybersecurity and cryptocurrency industries, including deploying small fleets of script algorithm miners and developing patent-pending security systems. Feedback welcome!
 
 \section*{Acknowledgments}
 \label{sec:acknowledgments}
