--- a/docs/academic_paper.tex
+++ b/docs/academic_paper.tex
@@ -746,6 +746,8 @@ Key modules:
     \item \texttt{extensions/economic\_models.py}: Economic forecasting
 \end{itemize}
 
+The prototype adheres to Dogecoin Core coding standards (e.g., C++ with Boost for crypto, no raw pointers), including unit tests for aggregation strategies. Future work includes full Core integration via a Dogecoin Improvement Proposal (DIP).
+
 \section*{Author Contributions and Methods}
 \label{sec:author_contributions}
 
