docs: Fix TikZ flowchart arrow alignment in Figure 1
- Change decision arrows to point to correct box sides instead of tops
- 'No' arrow now points to ecdsa.east (right side of ECDSA box)
- 'Yes' arrow now points to dilithium.west (left side of Dilithium box)
- Eliminates overlapping arrows that were pointing to box tops
- Creates clean, logical flowchart with proper arrow positioning
- Maintains professional academic presentation
- No TikZ warnings expected with corrected anchor points

--- a/docs/academic_paper.tex
+++ b/docs/academic_paper.tex
@@ -259,8 +259,8 @@ def generate_hybrid_keypair(self, threat_level: ThreatLevel):
 \node [block, below of=threat, node distance=3cm] (aggregate) {Aggregate Signatures (Logarithmic Compression)};
 \node [block, below of=aggregate, node distance=3cm] (verify) {Verify Aggregate (zk-SNARK Proof)};
 \path [line] (assess) -- (threat);
-\path [line] (threat) -| node [near start] {No} (ecdsa.north);
-\path [line] (threat) -| node [near start] {Yes} (dilithium.north);
+\path [line] (threat) -| node [near start] {No} (ecdsa.east);
+\path [line] (threat) -| node [near start] {Yes} (dilithium.west);
 \path [line] (ecdsa) -- (sign_fast);
 \path [line] (dilithium) -- (sign_secure);
 \path [line] (sign_fast) -- (aggregate);
