docs: Fix Code Availability section margin overflow
- Replace long URL with descriptive \href link text
- Changed from \url{...} to \href{URL}{GitHub Repository (PAT branch)}
- Prevents text from extending past right margin in PDF
- Maintains clickable link functionality with cleaner appearance

--- a/docs/academic_paper.tex
+++ b/docs/academic_paper.tex
@@ -754,8 +754,7 @@ PAT enables the post-quantum transition for blockchain networks while maintainin
 \section*{Code Availability}
 \label{sec:code}
 
-Complete implementation available at:
-\url{https://github.com/odenrider/dogecoin/tree/pat-aggregation-prototype/src/pat}
+Complete implementation available at: \href{https://github.com/odenrider/dogecoin/tree/pat-aggregation-prototype/src/pat}{GitHub Repository (PAT branch)}
 
 Key modules:
 \begin{itemize}
